force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <description>Historical Notes From Blackbaud</description>
    <label>Historical Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>