force-app/main/default/objects/Note__c/fields/NoteAuthor__c.field-meta.xml
<CustomField>
    <fullName>NoteAuthor__c</fullName>
    <label>NoteAuthor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>