force-app/main/default/objects/Note__c/fields/NoteDescription__c.field-meta.xml
<CustomField>
    <fullName>NoteDescription__c</fullName>
    <label>NoteDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>