force-app/main/default/objects/Note__c/fields/NoteNotes__c.field-meta.xml
<CustomField>
    <fullName>NoteNotes__c</fullName>
    <label>NoteNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>