force-app/main/default/objects/Note__c/fields/NoteTitle__c.field-meta.xml
<CustomField>
    <fullName>NoteTitle__c</fullName>
    <label>NoteTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>