force-app/main/default/objects/Note__c/fields/NoteType__c.field-meta.xml
<CustomField>
    <fullName>NoteType__c</fullName>
    <label>NoteType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Pledge</fullName>
            </value>
            <value>
                <fullName>RE NXT Summary</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Personality</fullName>
            </value>
            <value>
                <fullName>Conversion notes</fullName>
            </value>
            <value>
                <fullName>Passion</fullName>
            </value>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Interests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>