force-app/main/default/objects/Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NoteType__c</columns>
    <columns>NoteTitle__c</columns>
    <columns>NoteNotes__c</columns>
    <columns>NoteDescription__c</columns>
    <columns>NoteDate__c</columns>
    <columns>NoteAuthor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>